--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,9 @@
     },
     "require": {
         "google/apiclient": "^2.15"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.1",
+        "mockery/mockery": "^1.6"
     }
 }
