--- a/.htaccess
+++ b/.htaccess
@@ -35,7 +35,7 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
 
-<Files "credentials_google.json">
+<Files "config/credentials_google.json">
     Order Allow,Deny
     Deny from all
 </Files>
